# chat-in-c

./: .gitignore  CMakeLists.txt  README.md  ServerClient.c  ServerClient.h  ServerClientCommon.h  client.c  client.h  mySocket.c  mySocket.h  server.c  server.h
executables/: client  server
src/: ServerClient.c  ServerClient.h  ServerClientCommon.h  client.c  client.h  clientMain.c  mySocket.c  mySocket.h  server.c  server.h  serverMain.c  test.c
